SCRUM-210 Created tests for getting thesis groups